--- a/RouletteGame.Legacy/RouletteGame.Legacy.csproj
+++ b/RouletteGame.Legacy/RouletteGame.Legacy.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Bet.cs" />
     <Compile Include="Field.cs" />
+    <Compile Include="IBet.cs" />
     <Compile Include="IField.cs" />
     <Compile Include="IRoulette.cs" />
     <Compile Include="IRouletteGame.cs" />
